@@ -1,1 +1,0 @@
-usr/lib/python2*/*-packages/PyQt5/QtWebEngine*.so
