@@ -1,2 +1,0 @@
-usr/lib/python3*/dist-packages/PyQt5/QtWebEngine*.pyi
-usr/lib/python3*/dist-packages/PyQt5/QtWebEngine*.so
