@@ -12,6 +12,7 @@ pyqt5 (5.12+dfsg-1) UNRELEASED; urgency=medium
   * Update debian/watch to use the new tarballs location.
   * New upstream release.
   * Refresh debian/patches/public_sip.diff.
+  * Drop Qt WebEngine packages, they are now in a separate source.
 
  -- Scott Kitterman <scott@kitterman.com>  Mon, 12 Nov 2018 00:57:12 -0500
 
